[FIX] Register Page Overflow

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -12,8 +12,3 @@
 .background {
   height: 100vh;
 }
-
-.background img {
-  height: 100vh;
-  width: auto;
-}
